# chemicalbd

./: .copier-answers.yml  .gitignore  LICENSE  README.md  index.html  pyproject.toml  searchindex.js  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: chemicalbd.doctree  modules.doctree
_build/html/: .buildinfo
docs/: index.html  py-modindex.html  search.html
docs/.doctrees/: environment.pickle
docs/.doctrees/api/: modules.doctree
docs/_build/: searchindex.js
docs/_build/_sources/api/: modules.rst.txt
docs/_modules/chemicalbd/: bond_disconnector.html
docs/docs_out/: genindex.html  objects.inv  searchindex.js
docs/docs_out/_modules/.ipynb_checkpoints/: index-checkpoint.html
docs/docs_out/api/: chemicalbd.html  modules.html
docs/source/: conf.py
docs/source/api/: chemicalbd.rst
notebooks/: project_report.ipynb
src/chemicalbd/: Untitled.ipynb  __init__.py  bond_disconnector.py  project_tries.ipynb  tries diane COMPLETED.ipynb  tries.ipynb  tries_laura.ipynb
tests/: test_1_2_aminoalcohol.py  test_1_3_dicarbonyl.py  test_C_O_disc.py  test_C_S_bond.py  test_C_S_disc.ipynb  test_C_S_disc.py  test_C_S_disconnection.py  test_acyl_chloride_disc.py  test_alcohol_double_bond.py  test_alcohol_triple.py  test_aldol.py  test_alpha_carbonyl_alky.py  test_amide_disc.py  test_amine_disc.py  test_dicarbonyl_alky.py  test_disconnections.py  test_ester_disc.py  test_example_module.py  test_flatten_list.py  test_grignard.py  test_monocarbonyl_alky.py  test_monocarbonyl_tri_alky.py  test_swern.py  test_unique_list.py
(+8 files in other folders)
